--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>GAME</title>
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
     <canvas id="gamearea"></canvas>
