--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </style>
   </head>
   <body>
-    <canvas id="gamearea"></canvas>
+    <canvas id="gamearea" width="800" height="600"></canvas>
   </body>
 </html>
